2012-03-08 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c: Option -V prints target OS on DOS/Windows/OS2.

2012-03-07 Erwin Waterlander <waterlan@xs4all.nl>
	* dos2unix.c, unix2dos.c, mingw64.mak: Enabled wildcard
	  expansion for Win64 (MinGW-w64). Thanks to Steve Hay.
	* wccdos16.mak: Enabled wildcard expansion.
	* wccdos32.mak: Enabled wildcard expansion.
	* wccwin32.mak: Enabled wildcard expansion.
	* bcc.mak: Enabled wildcard expansion.

2012-03-02 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile: New target 'mostlyclean' that preserves the manual
	  files. Target 'clean' removes all built files, it restores the
	  Unix source package to its original state.
	* Makefile: New variable HTMLEXT to override the default 'htm'
	  extension for the manual in HTML format.

2012-02-01 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile, version.mk: Fix a compile error when debug
	  is enabled. Thanks to Maurizio Camisaschi and Lars Wendler.
	  See https://bugs.gentoo.org/400769
	* Makefile: Enable debugging info for gdb when DEBUG=1
	* man page: Small update in section RETURN VALUE.

2012-01-27 Erwin Waterlander <waterlan@xs4all.nl>
	* Version 5.3.2

2012-01-02 Erwin Waterlander <waterlan@xs4all.nl>
	* os2.mak: Enable support for wild cards (-Zargs-wild).
	  Thanks to Steven H. Levine and Elbert Pol.

2011-12-20 Erwin Waterlander <waterlan@xs4all.nl>
	* querycp.c: Extra comment from Rugxulo.
	* querycp.c: Undid change of 2011-11-12. MSYS version
	  behaves as Cygwin version.

2011-12-15 Erwin Waterlander <waterlan@xs4all.nl>
	* wccdos32.mak: New makefile for Open Watcom for DOS32.

2011-12-06 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile: Undo previous change for Darwin. Not restoring group and
	  owner may be destructive or a security risk.
	* Makefile, common.[ch]: Dos2unix builds on MSYS now.

2011-12-02 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile: For MacOS the option -DNO_CHOWN has been be added to the compile time flags.